--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -355,45 +355,60 @@ table{
 
 /*============Content Page=============*/
 .content-page{
-//    background: url(../img/login-bg) no-repeat center bottom;
-//    -webkit-background-size: cover;
-//    -moz-background-size: cover;
-//    -ms-background-size: cover;
-//    -o-background-size: cover;
-//    background-size: cover;
-	.unit-wrapper{
-		
+    .unit-wrapper{
+		margin-bottom: 10px;
 	}
 	.chapter-list{
+        line-height: 2.25;
 		li{
 			margin-bottom: 5px;
 		}
 		a{
-			color:$c-l-black;
+			color: #333;
+            display: block;
+            padding-left: 1rem;
+            text-shadow: none;
+             font-weight: 400;
+            &:hover{
+                text-decoration: none;
+//                color: #fff;
+//                background: $bg-tr-black;
+                 text-shadow: 0 0 1.5px  $bg-tr-black;
+             }
 			i.fa{
 				margin-right: 15px;
 			}
 		}
 	}
 	h1{
-		border-bottom: 2px solid $bg-l-black;
-		text-align: center;
+ 		text-align: center;
+        margin-bottom: 0;
 	}
 	.col-2{
-		border-right: 2px solid $bg-l-black;
-	}
-	.col-10{
-	    border-bottom: 2px solid $bg-l-black;
-	}
-	
+		border-right:  3px solid $bg-tr-black;
+	} 	
 }
 .unit-card{
 	padding: 10px;
-//	background: $bg-tr-black;
+	background: $bg-orange;
 	@include radius(0);
-//	color: #fff;
+	color: #fff;
 	text-align: center;
 	font-size: 18px;
-	border-bottom: 2px solid $bg-tr-black;
+	border-bottom: 3px solid $bg-tr-black;
 	margin-bottom: 0;
 }
+
+.hr-style { 
+  border: 0; 
+  height: 1px; 
+  background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b,#8c8b8b,#8c8b8b,#8c8b8b,#8c8b8b, #f0f0f0);
+  background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b,#8c8b8b,#8c8b8b,#8c8b8b,#8c8b8b, #f0f0f0);
+  background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b,#8c8b8b,#8c8b8b,#8c8b8b,#8c8b8b, #f0f0f0);
+  background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b,#8c8b8b,#8c8b8b,#8c8b8b,#8c8b8b, #f0f0f0); 
+    &.hr-style2{
+        height: 2px;
+         position: relative;
+    }
+}
+ 
