content page font

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -36,6 +36,9 @@ $dark:          $gray-800 !default;
 
 // Page Variables
 
+$basic-font: sans-serif;
+
+
 //----------FONT COLORS-------------
 
 $c-orange: #bd5d38;
