--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -208,6 +208,7 @@ table{
 }
 
 /* ========================== Card ======================== */
+
 .card {
   background: #fff;
   font-size: .875rem;
@@ -230,18 +231,18 @@ table{
   -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
   box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
   width: 100%;
-  text-align: center;
   min-height: 40px;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flex;
-  display: -o-flex;
-  display: flex;
+  font-size: 1rem;    
+  text-align: center;
   -webkit-align-items: center;
   -moz-align-items: center;
   -ms-align-items: center;
   -o-align-items: center;
-  align-items: center; }
+  align-items: center; 
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  font-weight: 500;
+}
 
 .card [class*="card-header-"] {
   margin: 0px 15px 0;
