--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -49,6 +49,6 @@ $bg-orange: #bd5d38;
 $bg-d-orange:#af380b;
 $bg-l-black: #3c2727;
 $bg-tr-black:rgba(60, 39, 39, 0.7);
-
+$bg-tr-black2:rgba(60, 39, 39, 0.4);
 
 $sidebar-base-width: 17rem;
