--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,8 @@ body.side-panel {
     color: #fff; }
 
 /*-----------------------------------*/
-ul, ol {
+ul,
+ol {
   list-style-type: none; }
 
 [type="submit"] {
@@ -93,12 +94,19 @@ ul, ol {
 ::-webkit-input-placeholder {
   color: rgba(0, 0, 0, 0.25) !important; }
 
-button.dt-button:active:not(.disabled):hover:not(.disabled), button.dt-button.active:not(.disabled):hover:not(.disabled), div.dt-button:active:not(.disabled):hover:not(.disabled), div.dt-button.active:not(.disabled):hover:not(.disabled), a.dt-button:active:not(.disabled):hover:not(.disabled), a.dt-button.active:not(.disabled):hover:not(.disabled) {
+button.dt-button:active:not(.disabled):hover:not(.disabled),
+button.dt-button.active:not(.disabled):hover:not(.disabled),
+div.dt-button:active:not(.disabled):hover:not(.disabled),
+div.dt-button.active:not(.disabled):hover:not(.disabled),
+a.dt-button:active:not(.disabled):hover:not(.disabled),
+a.dt-button.active:not(.disabled):hover:not(.disabled) {
   background: #bd5d38;
   border-color: #bd5d38;
   color: #fff; }
 
-button.dt-button:focus:not(.disabled), div.dt-button:focus:not(.disabled), a.dt-button:focus:not(.disabled) {
+button.dt-button:focus:not(.disabled),
+div.dt-button:focus:not(.disabled),
+a.dt-button:focus:not(.disabled) {
   background: #af380b;
   color: #fff;
   border-color: #af380b; }
@@ -120,7 +128,8 @@ ul.breadcrumb {
   list-style: none;
   background: transparent; }
 
-ul.breadcrumb li, ul.breadcrumb li a {
+ul.breadcrumb li,
+ul.breadcrumb li a {
   display: inline;
   color: #bd5d38;
   color: #fff;
@@ -146,12 +155,21 @@ input[disabled] {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); }
 
 .hr-style {
-  border: 0;
-  height: 1px;
-  background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-  background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-  background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-  background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); }
+  position: relative; }
+  .hr-style:before {
+    content: '';
+    width: 100%;
+    left: 0;
+    top: 0;
+    border: 0;
+    position: absolute;
+    height: 1px;
+    background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+    background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+    background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+    background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); }
+  .hr-style.hr-style2:before {
+    height: 2px; }
 
 .tx-c {
   text-align: center; }
@@ -658,7 +676,6 @@ table {
 
 /*============Content Page=============*/
 .content-page .chapter-list {
-  line-height: 2.25;
   margin-bottom: 10px; }
   .content-page .chapter-list li {
     margin-bottom: 5px; }
@@ -670,9 +687,12 @@ table {
     font-weight: 400; }
     .content-page .chapter-list a:hover {
       text-decoration: none;
-      text-shadow: 0 0 1.5px rgba(60, 39, 39, 0.7); }
+      text-shadow: 0 0 0px #3c2727; }
     .content-page .chapter-list a i.fa {
       margin-right: 15px; }
+  .content-page .chapter-list > [class^="col-"] {
+    padding-top: 10px;
+    padding-bottom: 10px; }
 .content-page h1 {
   text-align: center;
   margin-bottom: 0; }
@@ -693,17 +713,6 @@ table {
   .unit-card h4 {
     font-size: 18px;
     margin-bottom: 0; }
-
-.hr-style {
-  border: 0;
-  height: 1px;
-  background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #8c8b8b, #8c8b8b, #8c8b8b, #8c8b8b, #f0f0f0);
-  background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #8c8b8b, #8c8b8b, #8c8b8b, #8c8b8b, #f0f0f0);
-  background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #8c8b8b, #8c8b8b, #8c8b8b, #8c8b8b, #f0f0f0);
-  background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #8c8b8b, #8c8b8b, #8c8b8b, #8c8b8b, #f0f0f0); }
-  .hr-style.hr-style2 {
-    height: 2px;
-    position: relative; }
 
 /*=================book-content===============*/
 .chap-header .unit {
