--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -448,7 +448,7 @@ table {
 	.unit-wrapper {}
 
 	.chapter-list {
-		line-height: 2.25;
+		 
 		margin-bottom: 10px;
 
 		li {
@@ -464,12 +464,20 @@ table {
 
 			&:hover {
 				text-decoration: none;
-				text-shadow: 0 0 1.5px $bg-tr-black;
+				text-shadow: 0 0 0px $bg-l-black;
 			}
 
 			i.fa {
 				margin-right: 15px;
 			}
+		}
+//		>[class^="col-"]:not(.hr-style){
+//			padding-top: 10px;
+//			padding-bottom: 10px;	
+//		}
+		>[class^="col-"]{
+			padding-top: 10px;
+			padding-bottom: 10px;	
 		}
 	}
 
@@ -494,20 +502,6 @@ table {
 	h4 {
 		font-size: 18px;
 		margin-bottom: 0;
-	}
-}
-
-.hr-style {
-	border: 0;
-	height: 1px;
-	background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #8c8b8b, #8c8b8b, #8c8b8b, #8c8b8b, #f0f0f0);
-	background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #8c8b8b, #8c8b8b, #8c8b8b, #8c8b8b, #f0f0f0);
-	background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #8c8b8b, #8c8b8b, #8c8b8b, #8c8b8b, #f0f0f0);
-	background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #8c8b8b, #8c8b8b, #8c8b8b, #8c8b8b, #f0f0f0);
-
-	&.hr-style2 {
-		height: 2px;
-		position: relative;
 	}
 }
 
