--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -242,7 +242,7 @@ table {
 }
 
 .login-page {
-	background: url(../img/login-bg) no-repeat center bottom;
+	background: url(../img/login-bg.jpg) no-repeat center bottom;
 	@include background-size(cover);
 }
 
