--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,18 @@ body.side-panel {
       color: #BD5D38; }
 
 /*-----------------------------------*/
+h1 {
+  font-size: 2.5rem; }
+
+h2 {
+  font-size: 2rem; }
+
+h3 {
+  font-size: 1.5rem; }
+
+h4 {
+  font-size: 1.2rem; }
+
 /*--------------footer-----------*/
 .footer {
   padding: 20px 0 15PX;
@@ -174,6 +186,10 @@ input[disabled] {
 .tx-c {
   text-align: center; }
 
+@media all and (max-width: 767px) {
+  .hidden-xs {
+    display: none; } }
+
 .side-panel #sideNav .navbar-nav .nav-item .nav-link {
   font-weight: 800;
   letter-spacing: 0.05rem;
@@ -276,37 +292,6 @@ section.resume-section {
 .text-primary {
   color: #BD5D38 !important; }
 
-@media all and (max-width: 767px) {
-  .pdt {
-    padding-top: 66px; }
-
-  .logo {
-    width: 50px;
-    height: 50px; }
-
-  #collapsibleNavbar {
-    position: fixed;
-    bottom: 0;
-    width: 85%;
-    padding: 30px 0;
-    height: 100%;
-    left: -85%;
-    background: #3c2727;
-    overflow: hidden;
-    text-align: center;
-    z-index: 5;
-    -webkit-transition: 0.4s;
-    -moz-transition: 0.4s;
-    -ms-transition: 0.4s;
-    -o-transition: 0.4s;
-    transition: 0.4s; }
-    #collapsibleNavbar li a {
-      padding: 10px 15px;
-      font-size: 20px;
-      display: block; }
-
-  .show#collapsibleNavbar {
-    left: 0; } }
 /*============Custom Sytle=============*/
 .multiselect-native-select {
   display: block;
@@ -667,7 +652,7 @@ table {
   .wrapper-card .img-fluid {
     border: 2px solid #fff; }
   .wrapper-card .card-title {
-    font-size: 65px;
+    font-size: 60px;
     padding: 2px 0 11px; }
   .wrapper-card .card-margin {
     margin-bottom: 30px; }
@@ -693,10 +678,15 @@ table {
   .content-page .chapter-list > [class^="col-"] {
     padding-top: 10px;
     padding-bottom: 10px; }
+    @media all and (max-width: 767px) {
+      .content-page .chapter-list > [class^="col-"] {
+        padding-left: 5px;
+        padding-right: 3px;
+        font-size: 13px; } }
 .content-page h1 {
   text-align: center;
   margin-bottom: 0; }
-.content-page .col-2 {
+.content-page .col-md-2 {
   border-right: 2px solid rgba(60, 39, 39, 0.7); }
 
 .unit-card {
@@ -711,7 +701,6 @@ table {
   text-align: center;
   border-bottom: 3px solid rgba(60, 39, 39, 0.7); }
   .unit-card h4 {
-    font-size: 18px;
     margin-bottom: 0; }
 
 /*=================book-content===============*/
@@ -792,5 +781,54 @@ table {
   border-top-right-radius: 7px;
   border-bottom-right-radius: 7px;
   display: block; }
+
+/*=============================IMPORT RESPONSIVE CSS===============================*/
+@media all and (max-width: 767px) {
+  h1 {
+    font-size: 1.8rem; }
+
+  h2 {
+    font-size: 1.5rem; }
+
+  h3 {
+    font-size: 1.2rem; }
+
+  h4 {
+    font-size: 1rem; }
+
+  .pdt {
+    padding-top: 66px; }
+
+  .logo {
+    width: 50px;
+    height: 50px; }
+
+  #collapsibleNavbar {
+    position: fixed;
+    bottom: 0;
+    width: 85%;
+    padding: 30px 0;
+    height: 100%;
+    left: -85%;
+    background: #3c2727;
+    overflow: hidden;
+    text-align: center;
+    z-index: 5;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -ms-transition: 0.4s;
+    -o-transition: 0.4s;
+    transition: 0.4s; }
+    #collapsibleNavbar li a {
+      padding: 10px 15px;
+      font-size: 20px;
+      display: block; }
+
+  .show#collapsibleNavbar {
+    left: 0; }
+
+  .content-page .chapter-list a {
+    padding-left: 10px;
+    padding-right: 10px; } }
 
 /*# sourceMappingURL=style.css.map */
