--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -1,4 +1,16 @@
 @media all and (max-width:767px){
+	h1{
+		font-size: 1.8rem;
+	}
+	h2{
+		font-size: 1.5rem;
+	}
+	h3{
+		font-size: 1.2rem;
+	}
+	h4{
+		font-size: 1rem;
+	}
 	.pdt{
 		padding-top: 66px;
 	}
@@ -28,4 +40,9 @@
 	.show#collapsibleNavbar{
 		left: 0;
 	} 
+	.content-page .chapter-list a{
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+	
 }
