--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -1,4 +1,7 @@
 @media all and (max-width:767px){
+	.content {
+		padding-bottom: 35px;
+	}
 	h1{
 		font-size: 1.8rem;
 	}
@@ -44,5 +47,16 @@
 		padding-left: 10px;
 		padding-right: 10px;
 	}
-	
+	.content-page .chapter-list > [class^="col-"] {
+		padding-top: 7px;
+		padding-bottom: 7px;
+	}
+	.footer{
+		font-size: 13px;
+		line-height: 1.5;
+		h6{
+			font-size: 13px;
+			line-height: 1.4;
+		}
+	}
 }
