lesson plan changed+

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -249,8 +249,8 @@ table {
 	background: #fff;
 	font-size: .875rem;
 	border: 0;
-	margin-bottom: 30px;
-	margin-top: 20px;
+	margin-bottom:15px;
+	//margin-top: 20px;
 	color: #333333;
 	width: 100%;
 	-webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
